# SPINE

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
Emulators/: class_spine.py  class_spinex.py  growth.py  main.py
examples/: spine_example.ipynb
spine_pk/: __init__.py  class_spinex.py  growth.py  main.py  requirements.txt  utils.py
tests/: conftest.py  pytest.ini  test_physics.py  test_smoke.py  test_stability.py
