[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spine"
version = "0.1.0"
description = "Symbolic models to predict the evolution of the ΛCDM nonlinear power spectrum"
authors = [{name = "Manvi Chauhan", email = "m.chauhan-2018@hull.ac.uk"}]
readme = "README.md"
# license = {text = "M"}
dependencies = [
    "requests",
    "numpy>=1.20"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/skadoosh_MC/SPINE"
