[project]
name = "spine"
version = "0.1.0"
description = "Symbolic models to predict the evolution of the ΛCDM nonlinear power spectrum"
authors = [{name = "Manvi Chauhan", email = "m.chauhan-2018@hull.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Intended Audience :: Science/Research"
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "numba",
    "astropy",
    "camb",
    "colossus",
    "mpmath",
    "scikit-learn",
]

[tool.setuptools]
packages = ["Emulators"]  # << This tells setuptools which folder to install

[project.urls]
Homepage = "https://github.com/skadoosh_MC/SPINE"
