[metadata]
name = spine
version = 0.1.0
author = Manvi Chauhan
author_email = m.chauhan-2018@hull.ac.uk
description = Symbolic models to predict the evolution of the LCDM nonlinear matter power spectrum
url = https://github.com/skadoosh-MC/SPINE
project_urls =
    Bug Tracker = https://github.com/skadoosh-MC/SPINE/issues
classifiers =
    Programming Language :: Python :: 3
    #License :: OSI Approved :: MIT License
    #Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

